chore: updated colors to Catppuccin v0.1.1

--- a/catppuccin.conf
+++ b/catppuccin.conf
@@ -3,17 +3,17 @@
 
 # --> Catppuccin
 thm_bg="#1e1e28"
-thm_fg="#d7dae0"
+thm_fg="#dadae8"
 thm_cyan="#c2e7f0"
 thm_black="#15121c"
-thm_gray="#2d293b"
+thm_gray="#332e41"
 thm_magenta="#c6aae8"
-thm_pink="#f0afe1"
-thm_red="#e28c8c"
-thm_green="#b3e1a3"
-thm_yellow="#eadda0"
+thm_pink="#e5b4e2"
+thm_red="#e38c8f"
+thm_green="#b1e3ad"
+thm_yellow="#ebddaa"
 thm_blue="#a4b9ef"
-thm_orange="#f7c196"
+thm_orange="#f9c096"
 catppuccin12="#3e4058"
 
 # ----------------------------=== Theme ===--------------------------
