--- a/catppuccin.conf
+++ b/catppuccin.conf
@@ -14,7 +14,7 @@ thm_green="#b1e3ad"
 thm_yellow="#ebddaa"
 thm_blue="#a4b9ef"
 thm_orange="#f9c096"
-catppuccin12="#3e4058"
+thm_black4="#575268"
 
 # ----------------------------=== Theme ===--------------------------
 
@@ -54,4 +54,4 @@ setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_orange] #I #[fg=$thm_
 
 # --------=== Modes
 setw -g clock-mode-colour "${thm_blue}"
-setw -g mode-style "fg=${thm_pink} bg=${catppuccin12} bold"
+setw -g mode-style "fg=${thm_pink} bg=${thm_black4} bold"
